# cub3d

./: .gitignore  CMakeLists.txt  Makefile  README.md  draw_map.c  events.c  ft_cast_ray.c  get_next_line.c  get_next_line_utils.c  get_texture.c  graphics.h  hooks.c  main.c  map.cub  move_player.c  my_mlx_line_put.c  my_mlx_pixel_put.c  parse_map.c  ray_cast.c  texture_parser.c  throw_ray.c
config_file_handler/: a.out  config_file_requirements.txt  error_handle.c  get_options.c  map.cub  parse_config_file.c  parse_config_file_volume_1.c  parse_config_file_volume_2.c  parse_config_file_volume_3.c  parse_config_file_volume_4.c  parse_map.c  parse_map_volume_1.c  parse_map_volume_2.c  player_placer.c
get_next_line/: get_next_line.c  get_next_line_utils.c
headers/: ft_printf.h  get_next_line.h  graphics.h  libft.h  mlx.h
mlx/: mlx_image.swiftsourceinfo  mlx_init.swiftsourceinfo  mlx_window.swiftsourceinfo
src/: cub3d.h  cub3d_utils.c  cub3d_utils_part_1.c  cub3d_utils_part_2.c  draw_map.c  drawing.c  drawing_part_1.c  drawing_part_2.c  get_texture.c  main.c  main_engine_loop.c  mlx_main_loop.c  move_player.c  movings.c  movings_part_1.c  my_mlx_pixel_put.c  ray_cast.c  ray_casting.c  screenshoot.c  wood.xpm
src/mlx/: mlx.h.gch  mlx_opengl.h.gch  mlx_png.h.gch
src/textures/: sprite.xpm  sprite2.xpm
test_cub/: cub3d.h  cub3d.h.gch  key_macos.h.gch  move_player.c  movings.c  my_mlx_pixel_put.c  screenshoot.c  test_cub.c
textures/: wall_texture.xpm
